tests/neg/i6057.scala
class i0[i1] {
    type i2 <: i0[i2]
    val i3: i2[i4] {}  // error
}